@@ -1,13 +1,12 @@
 SUBDIRS = src
 
 MANS_CPP = \
-	ipmipower.8 \
-	ipmipower.conf.5
+	ipmipower.8
 
 $(MANS_CPP): $(MANS_CPP:%=%.pre)
 	$(CPP) -C -P -I. $@.pre  $@
 
-dist_man_MANS = $(MANS_CPP) ipmi-power.8
+dist_man_MANS = $(MANS_CPP) ipmi-power.8 ipmipower.conf.5
 
 CLEANFILES = $(MANS_CPP) *~
 
